seaqt/QtWebEngineCore/gen_qwebengineextensioninfo.h

class QMetaObject;
class QUrl;
class QWebEngineExtensionInfo;
typedef struct QMetaObject QMetaObject;
typedef struct QUrl QUrl;
typedef struct QWebEngineExtensionInfo QWebEngineExtensionInfo;
QWebEngineExtensionInfo* QWebEngineExtensionInfo_new();
QWebEngineExtensionInfo* QWebEngineExtensionInfo_new_from(QWebEngineExtensionInfo* from);
void QWebEngineExtensionInfo_operatorAssign(QWebEngineExtensionInfo* self, QWebEngineExtensionInfo* from);
void QWebEngineExtensionInfo_swap(QWebEngineExtensionInfo* self, QWebEngineExtensionInfo* other);
struct seaqt_string QWebEngineExtensionInfo_name(const QWebEngineExtensionInfo* self);
struct seaqt_string QWebEngineExtensionInfo_id(const QWebEngineExtensionInfo* self);
struct seaqt_string QWebEngineExtensionInfo_description(const QWebEngineExtensionInfo* self);
struct seaqt_string QWebEngineExtensionInfo_path(const QWebEngineExtensionInfo* self);
struct seaqt_string QWebEngineExtensionInfo_error(const QWebEngineExtensionInfo* self);
QUrl* QWebEngineExtensionInfo_actionPopupUrl(const QWebEngineExtensionInfo* self);
bool QWebEngineExtensionInfo_isEnabled(const QWebEngineExtensionInfo* self);
bool QWebEngineExtensionInfo_isLoaded(const QWebEngineExtensionInfo* self);
bool QWebEngineExtensionInfo_isInstalled(const QWebEngineExtensionInfo* self);
const QMetaObject* QWebEngineExtensionInfo_staticMetaObject();